Hamish section edits

--- a/final_assignment_group_2.Rmd
+++ b/final_assignment_group_2.Rmd
@@ -436,97 +436,302 @@ clean_data <- clean_data %>%
 
 
 
+
+
+
+
 ## Section 2 - Graphically summarising and exploring the Data.
 
-```{r}
-# Some quick counts, groups, etc
+### Section 2.1 - Exploration of the Independent Variables
 
-ask_a_manager_2021 %>% 
-  count(how_old_are_you, sort=TRUE) %>% 
-  mutate(percent = 100* n/sum(n))
-```
+Now that we have cleaned the data set, we can begin exploring it. We will start this process by looking individually at the different independent variables - determining the main components that make up each variable in the cleaned data set, as well as what proportion they represent. This allows us to better understand the characteristics of our sample, and draw some initial conclusions about why the data is distributed the way that it is. 
 
 ```{r}
-# Industry is messy... it has > 1000 different industries  
-ask_a_manager_2021 %>% 
-  count(industry, sort=TRUE) %>% 
-  mutate(percent = 100* n/sum(n))
-```
-
-
-```{r}
-# Most of 'currency' is USD
-ask_a_manager_2021 %>% 
-  count(currency, sort=TRUE) %>% 
+# We begin by counting the number of participants in different age groups...
+prop_age <- clean_data %>% 
+  count(how_old_are_you) %>% 
   mutate(percent = 100* n/sum(n))
 
+df1 <- data.frame(
+  Group = prop_age$how_old_are_you,
+  Value = prop_age$percent
+)
+
+#Constructing a pie chart...
+ggplot(df1, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each age category")
+
 ```
+
+As we can see here, the majority of people surveyed fall into the age bracket of 25-44. Given that 'managers' were the target audience of this survey, we would not expect to see many respondents below this age group, and this is confimed by the chart above. It is however, somewhat surprising that we don't see as many senior executives (between the ages of 45-64) complete the survey - this is something that we may want to factor into our analysis.  
+
 
 
 ```{r}
-# 'country' 
-ask_a_manager_2021 %>% 
-  count(Country, sort=TRUE) %>% 
+# Next we count the number of people in different industries... this time there are too many categories, so we group industries with <500 workers into 'Other'
+
+prop_industry <- clean_data %>% 
+  count(industry, sort=TRUE, na.rm = TRUE)
+prop_industry$industry <- ifelse(prop_industry$n < 500, "Other", prop_industry$industry)
+
+prop_industry2 <- aggregate(prop_industry$n, by=list(industry=prop_industry$industry), FUN=sum)
+
+prop_industry2 <- prop_industry2 %>%
+  mutate(percent = 100* x/sum(x)) %>%
+  arrange(percent)
+#prop_industry2
+
+df2 <- data.frame(
+  Group = prop_industry2$industry,
+  Value = prop_industry2$percent
+)
+
+#Constructing a pie chart...
+ggplot(df2, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each industry")
+```
+
+As we can see, there is a fairly balanced distribution of industries, with the most common being Computing/Tech, education and surprisingly non-profit. The balance spread of data between industries should allow for a fairly unbiased comparison of the salaries by industry later in this project. 
+
+
+```{r}
+# We display the country data in a similar way, grouping countries that have less than 200 respondents as 'other'...
+
+prop_country <- clean_data %>% 
+  count(Country, sort=TRUE, na.rm = TRUE)
+prop_country$Country <- ifelse(prop_country$n < 200, "Other", prop_country$Country)
+
+prop_country2 <- aggregate(prop_country$n, by=list(Country=prop_country$Country), FUN=sum)
+
+prop_country2 <- prop_country2 %>%
+  mutate(percent = 100* x/sum(x)) %>%
+  arrange(percent)
+#prop_country2
+
+df3 <- data.frame(
+  Group = prop_country2$Country,
+  Value = prop_country2$percent
+)
+
+#Constructing a pie chart...
+ggplot(df3, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each country")
+```
+
+The pie chart above shows that a huge proportion of our respondents come from the United States. This needs to be factored into our analysis, as it is not representative of the global population, and as a result we may see higher-than-expected salary values. In addition, we will be able to make predictions about the USA with greater confidence than we will for other countries. 
+
+
+
+```{r}
+# We repeat this process again to explore the 'state' variable, this time we remove NA's and group states that have less than 350 respondents as 'other'...
+
+prop_state <- clean_data %>% 
+  count(state_abb, sort=TRUE, na.rm = TRUE)
+prop_state$state_abb <- ifelse(prop_state$n < 300, "Other", prop_state$state_abb)
+
+prop_state2 <- aggregate(prop_state$n, by=list(state_abb=prop_state$state_abb), FUN=sum)
+
+prop_state2 <- prop_state2 %>%
+  mutate(percent = 100* x/sum(x)) %>%
+  arrange(percent)
+#prop_state2
+
+df4 <- data.frame(
+  Group = prop_state2$state_abb,
+  Value = prop_state2$percent
+)
+
+#Constructing a pie chart...
+ggplot(df4, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each US State")
+```
+
+The figure above shows that there is a disproportionate number of respondents living in states such as CA, NY and WA. This is expected however, as these states have some of the largest cities in the USA and some of the better-paid 'managerial' jobs. 
+
+
+```{r}
+# Now we explore the 'city' variable... any city with less than 500 people is grouped into 'other'
+
+prop_city <- clean_data %>% 
+  count(city, sort=TRUE, na.rm = TRUE)
+prop_city$city <- ifelse(prop_city$n < 500, "Other", prop_city$city)
+
+prop_city2 <- aggregate(prop_city$n, by=list(city=prop_city$city), FUN=sum)
+
+prop_city2 <- prop_city2 %>%
+  mutate(percent = 100* x/sum(x)) %>%
+  arrange(percent)
+#prop_city2
+
+df5 <- data.frame(
+  Group = prop_city2$city,
+  Value = prop_city2$percent
+)
+
+#Constructing a pie chart...
+ggplot(df5, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each major global city")
+```
+As we can see there is a huge variation in the location (city) of respondents. For this reason, it will be difficult to compare data between cities that are not in the top 5-10 shown above. 
+
+
+```{r}
+# We now explore the variable - 'overall_years_of_experience' ...
+prop_totalexp <- clean_data %>% 
+  count(overall_years_of_professional_experience) %>% 
   mutate(percent = 100* n/sum(n))
 
+df6 <- data.frame(
+  Group = prop_totalexp$overall_years_of_professional_experience,
+  Value = prop_totalexp$percent
+)
+
+#Constructing a pie chart...
+ggplot(df6, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of people within each category of OVERALL experience level")
+
 ```
+
+This graph above shows that the majority of our respondents have less than 20 years experience. This makes sense given the average age of our respondents is typically between 25 and 44. 
+
 
 
 ```{r}
-dataframe1 <- 
-  ask_a_manager_2021 %>% 
-  group_by(country) %>% 
-  count()
-```
-
-
-```{r}
-# 'city' 
-ask_a_manager_2021 %>% 
-  count(city, sort=TRUE) %>% 
+# We now explore the variable - 'years of experience within specific field' ...
+prop_fieldexp <- clean_data %>% 
+  count(years_of_experience_in_field) %>% 
   mutate(percent = 100* n/sum(n))
+
+df7 <- data.frame(
+  Group = prop_fieldexp$years_of_experience_in_field,
+  Value = prop_fieldexp$percent
+)
+
+#Constructing a pie chart...
+ggplot(df7, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of people in each category of SECTOR-SPECIFIC experience level")
 ```
+
+Here we see that almost nobody has more than 20 years of sector specific experience - once again we expect these results, as the average number of years of sector specific experience should almost certainly be less than the average number of years of total experience. 
 
 
 ```{r}
-# highest_level_of_education_completed 
-ask_a_manager_2021 %>% 
+# Education Level ...
+prop_education <- clean_data %>% 
   count(highest_level_of_education_completed) %>% 
-  mutate(percent = 100* n/sum(n))%>% 
-  arrange(desc(percent))
+  mutate(percent = 100* n/sum(n))
+
+df8 <- data.frame(
+  Group = prop_education$highest_level_of_education_completed,
+  Value = prop_education$percent
+)
+
+#Constructing a pie chart...
+ggplot(df8, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of people in each category of education level")
 ```
 
-```{r}
-# gender
-ask_a_manager_2021 %>% 
-  count(gender) %>% 
-  mutate(percent = 100* n/sum(n))%>% 
-  arrange(desc(percent))
-```
+The results for education highlight the fact that a disproportionate number of our respondents hold some form of degree (Master's or College). This is not representative of the global population, or even the population of the United States. This bias is expected within the data, as the survey is targeted towards people in 'managerial' roles - typically, we would expect these people to be more likely to have a degree. 
+
 
 ```{r}
-# race
-ask_a_manager_2021 %>% 
-  count(race) %>% 
-  mutate(percent = 100* n/sum(n))%>% 
-  arrange(desc(percent))
+# Gender ...
+prop_gender <- clean_data %>% 
+  count(gender, na.rm = TRUE) %>% 
+  mutate(percent = 100* n/sum(n))
+
+df9 <- data.frame(
+  Group = prop_gender$gender,
+  Value = prop_gender$percent
+)
+
+#Constructing a pie chart...
+ggplot(df9, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of people in each gender category")
 ```
 
-```{r}
-# overall_years_of_professional_experience 
-ask_a_manager_2021 %>% 
-  count(overall_years_of_professional_experience ) %>% 
-  mutate(percent = 100* n/sum(n))%>% 
-  arrange(desc(percent))
-```
+As this survey is targeted towards females, we have a particularly biased data set when it comes to gender. This is important to consider. 
+
+
 
 ```{r}
-# years_of_experience_in_field  
-ask_a_manager_2021 %>% 
-  count(years_of_experience_in_field  ) %>% 
-  mutate(percent = 100* n/sum(n))%>% 
-  arrange(desc(percent))
+# Finally, we explore the variable 'race' - in this instance, we group any ethnicity with n < 200 as 'Other'...
+
+prop_race <- clean_data %>% 
+  count(race, sort=TRUE, na.rm = TRUE)
+prop_race$race <- ifelse(prop_race$n < 200, "Other", prop_race$race)
+prop_race$race <- ifelse(prop_race$race == "Another option not listed here or prefer not to answer", "Other", prop_race$race)
+
+prop_race2 <- aggregate(prop_race$n, by=list(race=prop_race$race), FUN=sum)
+
+prop_race2 <- prop_race2 %>%
+  mutate(percent = 100* x/sum(x)) %>%
+  arrange(percent)
+#prop_race2
+
+df10 <- data.frame(
+  Group = prop_race2$race,
+  Value = prop_race2$percent
+)
+
+#Constructing a pie chart...
+ggplot(df10, aes(x="", y=Value, fill=Group))+ 
+  geom_col(color = "black")+
+  geom_text(aes(label=format(round(Value,1), nsmall=1)), position = position_stack(vjust = 0.5))+
+  coord_polar(theta = "y") + 
+  theme_void() + 
+  labs(title="Percentage of Surveyed people within each ethnicity category")
 ```
+
+Here, we can see that a disproportionate number of people surveyed are White. Around 75% of people in the USA are white, and as the USA is the most surveyed country, we expect the proportion of white people to be large. 
+
+The proportion of white people however, is still slightly higher than we would expect (particularly when considering the other countries surveyed) - and this could perhaps highlight a structural preference towards white people in the work place in the United States. 
+
+
+The analysis above has highlighted some of the bias in our dataset that needs to be considered in our analysis. We have a disproportionately high number of females, as well as biases towards white college educated people who live in the United States. This bias can be explained by the target audience of the "Ask A Manager" survey itself, but needs to be considered in the analysis of this data set.
+
+
+
+### Section 2.1 - Exploring the dependent variable and its relations.
+
+
+
 
 
 
